@@ -19,6 +19,8 @@ version 0.8.0 - Not released, available at https://simupop.svn.sourceforge.net/s
   - BUG: fix a mutator crash when locus index difference exceeds the range of integer,
 		for cases, for example, with 10k loci and 100k individuals.
   - NEW: add src/hapMapUtil.py to add some utility functions to handle HapMap data
+  - NEW: add parameter byChromosome to population::mergePopulationByLoci and
+		MergePopulationsByLoci to allow chromosome to chromosome merge.
 
 
 version 0.7.10 - (Rev 987) May 20, 2007
